boton imprimir inventario

--- a/CapaPresentacion/Frm_InventarioG.resx
+++ b/CapaPresentacion/Frm_InventarioG.resx
@@ -438,4 +438,37 @@
         VPH5e2eXXIhhaQVkhflQPbyZljwn5w9HvRAwI0TpwAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="toolStripImprimir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAZKSURBVFhHvVdZTFRnGLVPRtumUWMfTPrSaJp0idGkfapt
+        tFIXDFaKTa1SrVqLKFSQCgpSEI1ICLgUBQEjdKTQYbFQZBmRRVAEBR0GVJYKsjTsKUNxUMLpPR/3wrC5
+        ROuXfLl3Zu7855xv+/875Vlt+e54rNqXCPXjyzO3o1lY6alHcEKx+HL3uJdHwsYtDi6hBlwxNYLW3GrG
+        uoA//n8Cdj5JApSQWwVzb7+AaxaTZcQyJR3qoy/WvE7nS54ZaqqdyDq6euEUkokv/VNeLImVe/XYFWbA
+        NVOzCjW53b3XAtYGya7xTYb7yRwhsz3wT/m8Nyr/6ck5BqRgY1A6kvPvos/yUIV4vA0ODqK4tAIZRSZk
+        F1dh/aEUScue8EuISisXAkwj06XCTG6Lt8XA41TOU4ETuP/hACyWfnS0t6KlsQ65l0sRkVyMnNK/JD38
+        nZ5aVA2HA+fhHZX7ZBKsdi7wOBsYeKQAP4DZ3AtLXw9q6hsR8WsJTkQ043rJIynWfy19Q78rBGlMJ4v5
+        iSlZ9P1Z/KK/Kn8aa1RtDdze1oxUQwVORNZAp3uExMQBuaak9UrhEpxktIiW3WkREgGxRZOTWLIzFgER
+        eejq7pQ/0YaAh1QR2GzuQHFZNcLOVCIiuhep5wcFPC7+AWJ1ZoRFtiHiTBtqa/9Ro9U/HAnOERanCjfe
+        SMAzpABXimoEmAsMh1MBr6urw5kEI46dbBNQgsfFWwQ4KqZLgEngcGgDDh2tRpmxXdZgFFgPNBa5jVfC
+        xCQ+36HDjqAs6JNK0NTUJCG3DndwWL2EWVNNYGtw1gGfCTpRh/1BRrj7m2Cs7BBgRoGi6EyDnd8EkVjh
+        ck6qleBU293VNkm4x6sODb8v4FTuH1IpBFx9irHFq3B4mGmpqKxrw6e7JthLFm+PReyF69JWF7LyEBl3
+        UxbXwm2tmsBjVR8MvSPg+47cgMfBEvEvdmTB/UDRsHoaU7JY6TgVdsQ+c9Zhf0Qm4lMuISnDJICaa0Vm
+        HW6qJrC1ag3c1a8Qzr4F2LrXgPdW6lB7v13ASYI19bFzzHgCS1x12HksGxVVLfLQvQazgEfH9Ihr4R6r
+        2hqYagns5JOLbz0zscUnFW8vC0dIdKkQYIexphZuPjuaAIcQBwWZEpzTTCNB1ax8LdcTqSYwVROYqjd4
+        pGHt7lRs9DNgqZMe89dFSlHXVlfK+H7HMXqEwNaDabLfNzR3CygHSFe3RUiwDdnTmuKJVFuHe5NnxjC4
+        o3cB1npmY+obtnhtxnxZOy2/GOGJufjImgCLLyajQnqVwHyQ9xoRVm9JWYe0FYHpWritVTPkX7kmYb33
+        RWwMyMP7q4PxytQ5mDFrAZY6BIK75AKnWLxrHzY6/Mw9B4QGKCSUe42Edq9PrYez55VRuR6rmuB2LimY
+        NtNWwG3svaTqO3oGMFfJO7FU2BHjl/GG2+hst4hrJLQxak2GYd+0J1tU86oBiyvh/mDFIUydPhez3lwk
+        ovoHlJ1TdVN9t0xB7o4q9JCx/XgKqqntRmOjWQaHFgWNBFWwhbiz2bumS7iHwRVgG2U7f3XOKkx7fR62
+        eRwXxQTlVe4VATTW1eYj6bD11Y+QOKa7Ch63o1NvSdXTSYQECKyR4CJ0v+OXseIHPezdksXnL/XD9JkL
+        Me9DR9nO+yxKryve2q1ETbmSiLVxUxo3iOxcz8HBNwWGontS9XRGwpoAncZRytb6ZMMpzJ63AbPfssHP
+        gb+hqVM5D6jAEsEx4CSfmF+Jb/wTYaPgqdAjxlMR27G8vE3SQedCmnK6NlJ/PKCXkNuu8UZWcb2EmcAk
+        wXtGQRu9tPutnXJUY8dxOKmQ443MgnXXYDJ1iDMVBKZ6bWvm9bQuF7v94wXw7x7IVQs5wTXTVK/xTsIi
+        5cCjwkxuX/+UIKfchAt3YDIOkWAaCMxdkkewqkoT0i7ewHeBaYjOvC3AVD025JyqPGfynMF1VYgnG1PB
+        Ss0paJB0DLVlpwAbjbdQeK1cjuCMFlv4VNqtUao5cn+/ePPpVU9kXJitWVDYJARoRlMl0vNKZWGS5HPL
+        lclGImHnr0ua+K6wJ8IgxBzcn+PNyeVwuryAsig5UHi8pmouPDacQkJpK69wA/h+wUJTf3o+8wsbqlqC
+        8qqpnsjYxnxmtduzqJ4y5T/pHexRqSX38AAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
